# finger

./: .gitignore  Cargo.toml
.github/prompts/: plan-cooperativeSleep.prompt.md  plan-hintV2MultiRowEncoding.prompt.md
bots/: README.md
bots/ftz/: bot-farm.lua
bots/wow/: bot-rally-hk.lua
bots/wow-rally-hk/: README.md  main.lua
crates/core/: Cargo.toml
crates/core/src/: hint.rs  lib.rs  logger.rs  lua_rt.rs  orchestrator.rs  settings.rs  sleep.rs  types.rs
crates/core/src/platform/: darwin.rs  hotkey.rs  mod.rs  stub.rs  win32.rs
crates/finger/: Cargo.toml
crates/finger-core/src/: hint.rs  lib.rs  lua_rt.rs  orchestrator.rs  sleep.rs
crates/finger-core/src/platform/: darwin.rs
crates/finger-tui/: Cargo.toml
crates/finger-tui/src/: app.rs  event.rs
crates/finger/src/: main.rs
crates/test/: Cargo.toml  autogui.rs  capture-decode.rs  decode.rs  hint_decode.rs  test-autogui.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  confirm.rs  event.rs  lib.rs  ui.rs
src/: main.rs
