[package]
name = "finger-core"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua = { version = "0.10", features = ["lua54", "vendored"] }
regex = "1"
rand = "0.8"
anyhow = "1"
chrono = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.24", features = ["elcapitan"] }
core-foundation = "0.10"
libc = "0.2"
