[package]
name = "finger-core"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua = { version = "0.10", features = ["lua54", "vendored"] }
regex = "1"
rand = "0.8"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
image = { version = "0.24" }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.24", features = ["elcapitan"] }
core-foundation = "0.10"
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
