[package]
name    = "finger-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-autogui"
path = "autogui.rs"

[[bin]]
name = "test-hint"
path = "hint_decode.rs"

[dependencies]
finger-core    = { path = "../core", features = ["debug-capture"] }
image          = "0.24"
libtest-mimic  = "0.7"
