[package]
name    = "finger-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-autogui"
path = "test-autogui.rs"

[[bin]]
name = "test-hint"
path = "test-hint.rs"

[[bin]]
name = "decode"
path = "decode.rs"

[dependencies]
finger-core    = { path = "../core" }
image          = "0.24"
libtest-mimic  = "0.7"
